--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -40,16 +40,19 @@
         <h2>¿Qué servicios ofrecemos?</h2>
         <section class="services">
             <div>
+                <h3><strong>Envíos Rápidos en 24 horas</strong></h3>
                 <img src="../img/servicio1.png" alt="envio">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis non illo ipsa sunt odio mollitia ut suscipit totam dolor, quod in eum harum nulla ab, facere sapiente quibusdam eaque aspernatur.</p>
+                <p>"Nos especializamos en ofrecer soluciones de envío rápido con entregas garantizadas en tan solo 24 horas. Nuestra eficiencia y compromiso nos permiten cumplir con tus expectativas de manera oportuna."</p>
             </div>
             <div>
+                <h3><strong>Calidad Premium en Productos</strong></h3>
                 <img src="../img/calidadgarantizada.png" alt="calidad-garantizada">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, repellendus! Voluptas unde et laudantium laboriosam fugiat recusandae architecto tempora cum fugit repudiandae laborum quod at, veniam ipsa dolorum cupiditate ratione.</p>
+                <p>"Nos enorgullece proporcionar productos de calidad premium que superan las expectativas de nuestros clientes. Cada artículo que ofrecemos ha sido cuidadosamente seleccionado para garantizar su excelencia y durabilidad."</p>
             </div>
             <div>
+                <h3><strong>Atención al Cliente 24/7</strong></h3>
                 <img src="../img/servicio2.png" alt="atencion-personalizada">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam dolore ullam sapiente, eum aut maiores nulla temporibus iure quod dolorem doloremque quas earum fugit sed laborum sit impedit commodi eius!</p>
+                <p>"Valoramos a nuestros clientes y estamos comprometidos en brindarles un servicio excepcional. Nuestro equipo de atención al cliente está disponible las 24 horas del día, los 7 días de la semana, para asistirte en cualquier consulta o necesidad que puedas tener. Tu satisfacción es nuestra prioridad."</p>
             </div>
         </section>
     </main>
