--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -37,31 +37,26 @@
         </nav>
     </header>
     <main>
-        <h2>Contactanos</h2>
         <section class="formulario">
             <form action="">
+                <h2>Contactanos!</h2>
                 <div>
-                    <label for="nombre">Nombre:</label>
-                    <input type="text" id="name" name="Nombre">
+                    <input type="text" id="name" name="Nombre" placeholder="Escribe tu nombre">
                 </div>
                 <div>
-                    <label for="apellido">Apellido:</label>
-                    <input type="text" id="apellido" name="Apellido">
+                    <input type="text" id="apellido" name="Apellido" placeholder="Escribe tu apellido">
                 </div>
                 <div>
-                    <label for="telefono">Telefono:</label>
-                    <input type="number" id="telefono" name="Telefono">
+                    <input type="number" id="telefono" name="Telefono" placeholder="Escribe un numero de contacto">
                 </div>
                 <div>
-                    <label for="correo">E-mail de contacto:</label>
-                    <input type="email" id="correo" name="Correo Electronico">
+                    <input type="email" id="correo" name="Correo Electronico" placeholder="Escribe un mail de contacto">
                 </div>
                 <div>
-                    <label for="comentario">Escribi tu comentario:</label>
-                    <textarea name="comentario" id="comments" cols="50" rows="7"></textarea>
+                    <textarea name="comentario" id="comments" cols="50" rows="7" placeholder="Deja tus comentarios aqui"></textarea>
                 </div>
                 <div>
-                    <input type="submit">
+                    <input type="submit" id="enviar">
                 </div>
             </form>
         </section>
