--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <!--<link rel="stylesheet" href="./css/styles.css">-->
     <link rel="stylesheet" href="./css/estilos.css">
-    <title>TodoTech</title>
+    <title>TodoTech | Tecnologia y electrodomesticos</title>
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <meta name="description" content="Explora un universo de tecnología en nuestro sitio web, donde la calidad se encuentra con la conveniencia. Encuentra los últimos productos, servicios de mensajería eficientes y atención al cliente sin interrupciones, todo en un solo lugar.">
+    <meta name="keywords" content="Tecnologia, tecnología, productos, Celular, celulares, aire acondicionado, televisor, servicios, atencion personalizada, playstation, drones, technologies, disponibilidad, electrodomesticos, notebook, netbook, Smart">
 </head>
 
 <body>
