--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -6,7 +6,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <!--<link rel="stylesheet" href="./css/styles.css">-->
     <link rel="stylesheet" href="../css/estilos.css">    
-    <title>TodoTech</title>
+    <title>TodoTech | Tecnologia y electrodomesticos</title>
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
+    <meta name="description" content="Descubre nuestros servicios de primera clase que van más allá de la tecnología. Desde productos de calidad premium hasta servicios de mensajería optimizados, estamos comprometidos a ofrecerte una experiencia excepcional en cada interacción.">
+    <meta name="keywords" content="Tecnologia, tecnología, productos, Celular, celulares, aire acondicionado, televisor, servicios, atencion personalizada, playstation, drones, technologies, disponibilidad, electrodomesticos, notebook, netbook, Smart">
 </head>
 <body>
     <header>
